--- a/page2.html
+++ b/page2.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="page2.css" />
     <title>Document</title>
   </head>
-  <body class="pt-16">
+  <body class="pt-16 px-8">
     <div
-      class="container h-full flex flex-col  border-solid border-black border-2"
+      class="container h-full flex flex-col border-solid border-black border-2"
     >
       <!--Artist sound-->
       <div class="section flex flex-col relative mb-16">
@@ -51,7 +51,9 @@
         </div>
       </div>
       <!--Ref-->
-      <div class="section border-solid border-black border-t-2 border-b-2 pb-48 pt-8">
+      <div
+        class="section border-solid border-black border-t-2 border-b-2 pb-48 pt-8"
+      >
         <div class="section-header">
           <h2
             class="text-5xl uppercase w-max mx-auto bg-white px-4 tracking-widest"
@@ -60,15 +62,21 @@
             references
           </h2>
         </div>
-        <div class="section-content uppercase font-semibold grid place-items-center">
+        <div
+          class="section-content uppercase font-semibold grid place-items-center"
+        >
           <span id="ad" class="relative">AFRICAN DIASPORA</span>
-          <p class="relative mt-2 text-right" id="mvm">BE PART OF THE <br />
-            MOVEMENT</p>
-          </div>
+          <p class="relative mt-2 text-right" id="mvm">
+            BE PART OF THE <br />
+            MOVEMENT
+          </p>
         </div>
+      </div>
 
-        <!--Videos-->
-      <div class="section border-solid border-black border-t-2 border-b-2 pb-24">
+      <!--Videos-->
+      <div
+        class="section border-solid border-black border-t-2 border-b-2 pb-24"
+      >
         <div class="section-header">
           <h2
             class="text-5xl uppercase w-max mx-auto bg-white px-4"
@@ -81,80 +89,86 @@
           <div class="flex w-full justify-around">
             <div>
               <i>Music Video</i>
-              <img src="./img/thumb1.jpg" alt="Thumbnail">
+              <img src="./img/thumb1.jpg" alt="Thumbnail" />
             </div>
             <div>
               <strong>Performance at</strong>
-              <img src="./img/thumb2.jpg" alt="">
+              <img src="./img/thumb2.jpg" alt="" />
             </div>
           </div>
         </div>
       </div>
 
-      
       <!--Socials-->
-      <div class="section border-solid border-black border-t-2 border-b-2 pb-24">
+      <div
+        class="section border-solid border-black border-t-2 border-b-2 pb-24"
+      >
         <div class="section-header">
-            <h2  class="text-5xl uppercase w-max mx-auto bg-white px-4"
-            style="transform: translateY(-1.75rem)">Artist Socials</h2>
+          <h2
+            class="text-5xl uppercase w-max mx-auto bg-white px-4"
+            style="transform: translateY(-1.75rem)"
+          >
+            Artist Socials
+          </h2>
         </div>
         <div class="section-content flex justify-center items-center">
-            <!--Youtube-->
-            <div class="social">
-                <img src="./img/yt.png" alt="">
-            </div>
-            <!--Spot-->
-            <div class="social">
-                <img src="./img/spot.png" alt="">
-            </div>
-            <!--Insta-->
-            <div class="social">
-                <img src="./img/ig.png" alt="">
-            </div>
-            <!--Facebook-->
-            <div class="social">
-                <img src="./img/fb.png" alt="" height="80px" width="80px">
-            </div>
+          <!--Youtube-->
+          <div class="social">
+            <img src="./img/yt.png" alt="" />
+          </div>
+          <!--Spot-->
+          <div class="social">
+            <img src="./img/spot.png" alt="" />
+          </div>
+          <!--Insta-->
+          <div class="social">
+            <img src="./img/ig.png" alt="" />
+          </div>
+          <!--Facebook-->
+          <div class="social">
+            <img src="./img/fb.png" alt="" height="80px" width="80px" />
+          </div>
         </div>
       </div>
+      <div class="management flex align-center items-center">
+        <p>Management: hghlysprtl@gmail.com</p>
       </div>
-    
     </div>
 
     <style>
-      #ad::before{
-        content:"";
-        width:100%;
-        height:2px;
+      #ad::before {
+        content: "";
+        width: 100%;
+        height: 2px;
         position: absolute;
-        bottom:-.5rem ;
-        left:1rem;
-background:#000;
+        bottom: -0.5rem;
+        left: 1rem;
+        background: #000;
       }
       #ad::after {
         position: absolute;
-        right:0;
-        top:0;
+        right: 0;
+        top: 0;
         content: '"';
-        transform:translate(4rem, -1rem);
-        font-size:2rem;
+        transform: translate(4rem, -1rem);
+        font-size: 2rem;
       }
       #mvm::before {
         content: '"';
         position: absolute;
-        top:0;
-        left:0;
-        transform: translate(-5rem, .5rem) rotate(10deg);
-        font-size:4rem;
-      } #mvm::after {
+        top: 0;
+        left: 0;
+        transform: translate(-5rem, 0.5rem) rotate(10deg);
+        font-size: 4rem;
+      }
+      #mvm::after {
         content: '"';
         position: absolute;
-        top:0;
-        left:0;
-        transform:translate(15rem, -1rem) rotate(10deg);
-        font-size:4rem;
+        top: 0;
+        left: 0;
+        transform: translate(15rem, -1rem) rotate(10deg);
+        font-size: 4rem;
       }
     </style>
-
   </body>
 </html>
