change logo to png

--- a/page1.html
+++ b/page1.html
@@ -20,11 +20,11 @@
           height="779px"
         />
         <img
-          class="logo-img absolute top-0 left-0"
-          src="./img/logo.jpg"
+          class="logo-img absolute top-0 -left-20 object-contain"
+          src="./img/logo.png"
           alt="logo"
-          width="150px"
-          height="150px"
+          width="400px"
+          height="400px"
         />
       </div>
       <!--ALBUM CONTENT-->
