--- a/page2.html
+++ b/page2.html
@@ -45,10 +45,10 @@
   </head>
   <body class="pt-16 px-8">
     <div
-      class="container h-full flex flex-col border-solid border-black border-2"
+      class="container h-max flex flex-col border-solid border-black border-t-2"
     >
       <!--Artist sound-->
-      <div class="section flex flex-col relative mb-16">
+      <div class="section flex flex-col relative border-l-2 border-r-2 border-black pb-16">
         <div class="section-header">
           <h2
             class="text-7xl uppercase w-max mx-auto px-4 flex gap-24 bg-white -translate-y-[2.625rem]"
@@ -86,7 +86,7 @@
       </div>
       <!--Ref-->
       <div
-        class="section border-solid border-black border-t-2 border-b-2 pb-48 pt-8"
+        class="section border-solid border-black border-2 pb-48 pt-8"
       >
         <div class="section-header">
           <h2
@@ -108,7 +108,7 @@
 
       <!--Videos-->
       <div
-        class="section border-solid border-black border-t-2 border-b-2 pb-24"
+        class="section border-solid border-black border-2 pb-24"
       >
         <div class="section-header">
           <h2
@@ -143,7 +143,7 @@
 
       <!--Socials-->
       <div
-        class="section border-solid border-black border-t-2 border-b-2 pb-24"
+        class="section border-solid border-black border-2 pb-4"
       >
         <div class="section-header">
           <h2
