--- a/page2.html
+++ b/page2.html
@@ -48,7 +48,9 @@
       class="container h-max flex flex-col border-solid border-black border-t-2"
     >
       <!--Artist sound-->
-      <div class="section flex flex-col relative border-l-2 border-r-2 border-black pb-16">
+      <div
+        class="section flex flex-col relative border-l-2 border-r-2 border-black pb-16"
+      >
         <div class="section-header">
           <h2
             class="text-7xl uppercase w-max mx-auto px-4 flex gap-24 bg-white -translate-y-[2.625rem]"
@@ -61,7 +63,7 @@
             AFROBEATS<br />GERMAN<br />AFROSWING<br />RAP<br />DRILl
           </div>
           <div class="works flex w-full gap-x-4">
-            <div class="album">
+            <div class="album flex flex-col items-center">
               <img
                 src="./img/album.jpg"
                 alt=""
@@ -69,9 +71,9 @@
                 width="150px"
                 height="150px"
               />
-              <p>Album name</p>
+              <p>HIGHLY SPIRITUAL EP</p>
             </div>
-            <div class="single">
+            <div class="single flex flex-col items-center">
               <img
                 src="./img//single.jpg"
                 alt=""
@@ -79,15 +81,13 @@
                 width="150px"
                 height="150px"
               />
-              <p>Single name</p>
+              <p>HIGHLY SPIRITUAL FLOW</p>
             </div>
           </div>
         </div>
       </div>
       <!--Ref-->
-      <div
-        class="section border-solid border-black border-2 pb-28 pt-8"
-      >
+      <div class="section border-solid border-black border-2 pb-28 pt-8">
         <div class="section-header">
           <h2
             class="text-5xl uppercase w-max mx-auto bg-white px-4 tracking-widest -translate-y-[3.75rem]"
@@ -107,9 +107,7 @@
       </div>
 
       <!--Videos-->
-      <div
-        class="section border-solid border-black border-2 pb-24"
-      >
+      <div class="section border-solid border-black border-2 pb-24 border-t-0">
         <div class="section-header">
           <h2
             class="text-5xl uppercase w-max mx-auto bg-white px-4 -translate-y-7"
@@ -142,9 +140,7 @@
       </div>
 
       <!--Socials-->
-      <div
-        class="section border-solid border-black border-2 pb-4"
-      >
+      <div class="section border-solid border-black border-2 pb-4 border-t-0">
         <div class="section-header">
           <h2
             class="text-5xl uppercase w-max mx-auto bg-white px-4 -translate-y-7"
