--- a/page2.html
+++ b/page2.html
@@ -71,7 +71,10 @@
                 width="150px"
                 height="150px"
               />
-              <p>HIGHLY SPIRITUAL EP</p>
+              <a
+                href="https://www.youtube.com/watch?v=snvmfTewNj4&list=OLAK5uy_nL0NnEZZ1aOKiQtIa6pKT4lBY9iiJKWkU"
+                >HIGHLY SPIRITUAL EP</a
+              >
             </div>
             <div class="single flex flex-col items-center">
               <img
@@ -81,7 +84,10 @@
                 width="150px"
                 height="150px"
               />
-              <p>HIGHLY SPIRITUAL FLOW</p>
+              <a
+                href="https://www.youtube.com/watch?v=k5_vBapi6aI&list=OLAK5uy_nshJlGgS9kVE1ePEuipxcqjHnHfJi0q4g"
+                >HIGHLY SPIRITUAL FLOW</a
+              >
             </div>
           </div>
         </div>
