updated border width

--- a/page1.html
+++ b/page1.html
@@ -29,7 +29,9 @@
       </div>
       <!--ALBUM CONTENT-->
       <div class="album-content px-8 pt-24 bottom-0">
-        <div class="content-box relative px-8 pt-16 pb-8">
+        <div
+          class="content-box relative px-8 pt-16 pb-8 border-solid border-black border-2"
+        >
           <header class="album-header absolute bg-white px-8">
             <h2 class="text-7xl uppercase tracking-[.5em]">Biography</h2>
           </header>
