album pic link updated

--- a/page2.html
+++ b/page2.html
@@ -64,30 +64,29 @@
           </div>
           <div class="works flex w-full gap-x-4">
             <div class="album flex flex-col items-center">
-              <img
-                src="./img/album.jpg"
-                alt=""
-                class="album-img"
-                width="150px"
-                height="150px"
-              />
               <a
                 href="https://www.youtube.com/watch?v=snvmfTewNj4&list=OLAK5uy_nL0NnEZZ1aOKiQtIa6pKT4lBY9iiJKWkU"
-                >HIGHLY SPIRITUAL EP</a
-              >
+                ><img
+                  src="./img/album.jpg"
+                  alt=""
+                  class="album-img"
+                  width="150px"
+                  height="150px"
+              /></a>
+              <p>HIGHLY SPIRITUAL EP</p>
             </div>
             <div class="single flex flex-col items-center">
-              <img
-                src="./img//single.jpg"
-                alt=""
-                class="single-img"
-                width="150px"
-                height="150px"
-              />
               <a
                 href="https://www.youtube.com/watch?v=k5_vBapi6aI&list=OLAK5uy_nshJlGgS9kVE1ePEuipxcqjHnHfJi0q4g"
-                >HIGHLY SPIRITUAL FLOW</a
               >
+                <img
+                  src="./img//single.jpg"
+                  alt=""
+                  class="single-img"
+                  width="150px"
+                  height="150px"
+              /></a>
+              <p>HIGHLY SPIRITUAL FLOW</p>
             </div>
           </div>
         </div>
